# Phantom-Renderer

./: .gitmodules  CMakeLists.txt  NOTICE  README.md  test.c  test.cpp
example/: CMakeLists.txt  example.c  exampleFunctions.h  exampleGlobalValues.h  exampleLite.c
example/res/shaders/: HUDComputeShader.glsl  HUDFragmentShader.glsl  HUDVertexShader.glsl  debugFragmentShader.glsl  debugGeometryShader.glsl  debugVertexShader.glsl  defaultFragmentShader.glsl  defaultGeometryShader.glsl  depth2FragmentShader.glsl  depth2GeomtryShader.glsl  depthFragmentShader.glsl  depthVertexShader.glsl  normalFragmentShader.glsl  normalGeometryShader.glsl  normalVertexShader.glsl  skyboxFragmentShader.glsl  skyboxVertexShader.glsl
headers/PR/: PR.h  PR.hpp  camera.h  cameraInternal.h  computeShader.h  computeShaderInternal.h  cubeMap.h  cubeMapInternal.h  defines.h  draw.h  error.h  error.hpp  framebuffer.h  framebufferInternal.h  helperStuffs.h  light.h  logger.h  loggerInternal.hpp  material.h  memory.h  mesh.h  mesh.hpp  meshInternal.h  renderbuffer.h  renderbufferInternal.h  shader.h  shaderInternal.h  state.h  texture.h  texture.hpp  textureInternal.h  window.h  window.hpp
source/: camera.c  cameraInternal.c  computeShader.c  computeShaderInternal.c  cubeMap.c  cubeMapInternal.c  draw.c  error.c  error.cpp  framebuffer.c  framebufferInternal.c  helperStuffs.c  light.c  logger.c  loggerInternal.c  material.c  memory.c  mesh.c  mesh.cpp  meshInternal.c  renderbuffer.c  renderbufferInternal.c  shader.c  shaderInternal.c  state.c  texture.c  texture.cpp  textureInternal.c  window.c  window.cpp
